[gd_scene load_steps=9 format=3 uid="uid://dgdy4vh3lnbkb"]

[ext_resource type="Script" path="res://memory/nodes/area/generation/node_area_editor.gd" id="1_mmey2"]
[ext_resource type="Script" path="res://memory/nodes/area/generation/node_area_editor_preview.gd" id="2_m2uwh"]
[ext_resource type="Script" path="res://memory/nodes/area/generation/node_area_editor_metrics.gd" id="3_ub4tf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e718f"]
content_margin_left = 20.0
content_margin_top = 20.0
draw_center = false
expand_margin_left = 20.0
expand_margin_top = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbt5w"]
draw_center = false

[sub_resource type="LabelSettings" id="LabelSettings_0oltd"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_wa3vi"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_k24jj"]
font_size = 20

[node name="NodeAreaEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mmey2")
preview_path = NodePath("Panel/VBoxContainer/HBoxContainer/Panel/Preview")
metrics_path = NodePath("Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e718f")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(850, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -225.5
offset_right = 200.0
offset_bottom = 225.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jbt5w")

[node name="Preview" type="Control" parent="Panel/VBoxContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_m2uwh")

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MetricsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("3_ub4tf")

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
text = "Metrics"
label_settings = SubResource("LabelSettings_0oltd")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sectors"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer"]
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mirroring"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer2"]
layout_mode = 2
text = "-
"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Baked count"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer3"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Baked length"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer4"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Baked interval"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer5"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intersect. count"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer6"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer7" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intersect. per sector"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer7"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer8" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intersect. min distance"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer8"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_k24jj")

[node name="HBoxContainer9" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intersect. max density"
label_settings = SubResource("LabelSettings_wa3vi")

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/CenterContainer/MetricsContainer/HBoxContainer9"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_k24jj")

[node name="AddPoint" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Add point"

[node name="Visibility" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Controls" type="Button" parent="Panel/VBoxContainer/Visibility"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controls"

[node name="Marking" type="Button" parent="Panel/VBoxContainer/Visibility"]
layout_mode = 2
size_flags_horizontal = 3
text = "Marking"

[node name="Intersections" type="Button" parent="Panel/VBoxContainer/Visibility"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intersections"

[node name="Curves" type="Button" parent="Panel/VBoxContainer/Visibility"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mandala"

[node name="Metrics" type="Button" parent="Panel/VBoxContainer/Visibility"]
layout_mode = 2
size_flags_horizontal = 3
text = "Metrics"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Randomize" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Randomize"

[node name="Recalculate" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Re-analyze"

[connection signal="pressed" from="Panel/VBoxContainer/AddPoint" to="." method="_on_add_point_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Visibility/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Visibility/Marking" to="." method="_on_marking_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Visibility/Intersections" to="." method="_on_intersections_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Visibility/Curves" to="." method="_on_curves_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Visibility/Metrics" to="." method="_on_metrics_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Randomize" to="." method="_on_randomize_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Recalculate" to="." method="_on_recalculate_pressed"]
